instructor-labE/manifests-labE/20-shop-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shop
