instructor-labE/manifests-labE/31-shop-web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-web
  namespace: shop
  annotations:
    kubernetes.io/change-cause: "EKS 이전"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: shop
      tier: web
  template:
    metadata:
      labels:
        app: shop
        tier: web
        version: v1
    spec:
      containers:
        - name: nginx
          image: nginx:1.30-alpine
          ports:
            - containerPort: 80
          resources:
            requests: {cpu: 50m, memory: 64Mi}
            limits: {cpu: 200m, memory: 128Mi}
          volumeMounts:
            - name: logs
              mountPath: /var/log/nginx
            - name: html
              mountPath: /usr/share/nginx/html
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: logs
          emptyDir: {}
        - name: html
          configMap:
            name: shop-web-html
        - name: nginx-conf
          configMap:
            name: shop-web-nginx
