instructor-labE/manifests-labE/41-shop-db-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shop-db
  namespace: shop
spec:
  serviceName: shop-db
  replicas: 1
  selector:
    matchLabels:
      app: shop
      tier: db
  template:
    metadata:
      labels:
        app: shop
        tier: db
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        runAsNonRoot: true
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: mysql
          image: mysql:8.4
          ports:
            - name: mysql
              containerPort: 3306
          resources:
            requests: {cpu: 250m, memory: 512Mi}
            limits: {cpu: 500m, memory: 1Gi}
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: gp3
        resources:
          requests:
            storage: 5Gi
