instructor-labE/manifests-labE/33-shop-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop-web
  namespace: shop
  labels:
    app: shop
    tier: web
spec:
  type: ClusterIP
  selector:
    app: shop
    tier: web
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
